january 20th updates

--- a/src/App.css
+++ b/src/App.css
@@ -47,10 +47,14 @@
   }
 }
 
-
-
-
-
-
 /* Other global styles */
+
+html {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+}
+
+html::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
 
